--- a/lab4/hw4.Rmd
+++ b/lab4/hw4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 4"
-author: "Your Name Here"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -20,21 +20,60 @@ For this homework, we will be using the `msleep` dataset from the `ggplot2` pack
 
 **1. Use a summary function of your choice to get an idea of the structure of the msleep data.**
 
+```{r}
+summary(msleep)
+```
+
+
 **2. What are the names of the variables? To get a better idea of what the variables mean, you can use `?msleep`.**
+```{r}
+names(msleep)
+```
 
 **3. Make a plot that shows the number of mammals in each vore type. Which vore type is most represented in the data?**
+```{r}
+ggplot(data = msleep, mapping = aes(x = vore)) + geom_bar(mapping = aes(fill = vore))
+```
 
 **4. What is the average length of time that each mammal sleeps?**
 
+```{r}
+avg <- mean(msleep$sleep_total)
+avg
+```
+
+
 **5. Use `summary()` to get a quick idea of the range of values for the variable `bodywt`.**
+
+```{r}
+summary(msleep)
+```
 
 **6. Build a plot that shows the range of `bodywt.` by vore type. Because the range of `bodywt` is so variable, you will need to scale the y-axis. You do this by adding `scale_y_log10()` as another layer.**
 
+```{r}
+ggplot(data = msleep, mapping = aes(x = vore, y = bodywt)) + geom_boxplot(mapping = aes(fill = vore)) + scale_y_log10()
+```
+
+
 **7. Is there a relationship between body weight and total sleep time? Add appropriate labels and a title to your plot.**
+
+```{r}
+ggplot(data = msleep, mapping = aes(x = bodywt, y = sleep_total)) + geom_point() + scale_x_log10() + labs(title = "Body Weight vs. Total Sleep Time", x = "Body Weight", y = "Total Sleep Time")
+```
+
 
 **8. Which vore type tends to sleep the most? Build a plot to support your answer.**
 
+```{r}
+ggplot(data = msleep, mapping = aes(x = vore, y=sleep_total)) + geom_boxplot(mapping = aes(fill = vore)) + labs(title = "Total Sleep by Vore Type", x = "Vore", y = "Amount of Sleep")
+```
+
 **9. Is there a relationship between brain weight and body weight? Build a plot to support your answer.**
+
+```{r}
+ggplot(data = msleep, mapping = aes(x = bodywt, y = brainwt)) + geom_point() + scale_x_log10() + scale_y_log10()
+```
 
 **10. Build one plot of your choice that provides additional insight into the msleep dataset. Be sure to include appropriate labels and a title.**
 
