--- a/lab4/hw4.Rmd
+++ b/lab4/hw4.Rmd
@@ -72,10 +72,15 @@ ggplot(data = msleep, mapping = aes(x = vore, y=sleep_total)) + geom_boxplot(map
 **9. Is there a relationship between brain weight and body weight? Build a plot to support your answer.**
 
 ```{r}
-ggplot(data = msleep, mapping = aes(x = bodywt, y = brainwt)) + geom_point() + scale_x_log10() + scale_y_log10()
+ggplot(data = msleep, mapping = aes(x = brainwt, y=bodywt)) + geom_point() + labs(title = "Brain Weight by Body Weight", x = "Brain Weight", y = "Body Weight") +scale_y_log10() + scale_x_log10()
 ```
 
 **10. Build one plot of your choice that provides additional insight into the msleep dataset. Be sure to include appropriate labels and a title.**
+
+```{r}
+ggplot(data = msleep, mapping = aes(x = vore, y=sleep_rem)) + geom_boxplot(mapping = aes(fill = vore)) + labs(title = "Amount of Sleep in REM by Vore", x = "Vore", y = "Time in REM Sleep")
+```
+
 
 ## Knit and Upload
 Please knit your work as an .html file and upload to Canvas. Homework is due before the start of the next lab. No late work is accepted. Make sure to use the formatting conventions of RMarkdown to make your report neat and clean!  
