--- a/lab5/hw5.Rmd
+++ b/lab5/hw5.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 5"
-author: "Your Name Here"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -23,12 +23,12 @@ Data: http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1
 
 **1. Load the data into a new object called `homerange`.**
 ```{r}
-
+homerange <- read_csv("/Users/catamorr/Desktop/GitHub/BIS15L_W26_cdeamorrortu/lab5/data/Tamburelloetal_HomeRangeDatabase.csv")
 ```
 
 **2. What is the structure of the `homerange` data? Does it have any NA's? Do a quick exploratory analysis of your choice below.**
 ```{r}
-
+glimpse(homerange)
 ```
 
 ```{r}
@@ -37,17 +37,17 @@ Data: http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1
 
 **3. Which animal groups are represented in the data? Make a plot that shows the number in each class.**
 ```{r}
-
+ggplot(data = homerange, mapping = aes(x = taxon)) + geom_bar(aes(fill = taxon)) + labs(title = "Animal Groups Represented in Homerange Data")
 ```
 
 **4. Are there more carnivores or herbivores represented in the data? Make a plot that shows the number in each trophic guild.**
 ```{r}
-
+homerange %>% filter(trophic.guild == "carnivore" | trophic.guild == "herbivore") %>% ggplot(data = homerange, mapping = aes(x = trophic.guild)) + geom_bar(aes(fill = trophic.guild)) + labs(title = "Amount of Carnivores compared to Herbivores in Homerange Data")
 ```
 
 **5. Which herbivorous mammals have homeranges greater than 1,000,000 m²? Show only the common name, order, mean homerange size, and mean body mass. Arrange the data in descending order by homerange size and show only the top 10 species.**
 ```{r}
-
+homerange %>% filter(mean.hra.m2 > 1000000) %>% select(common.name, order, mean.hra.m2, mean.mass.g) %>% arrange(desc(mean.hra.m2))
 ```
 
 **6. Which two species have the largest and smallest homerange sizes?**
