--- a/lab5/hw5.Rmd
+++ b/lab5/hw5.Rmd
@@ -23,7 +23,7 @@ Data: http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1
 
 **1. Load the data into a new object called `homerange`.**
 ```{r}
-homerange <- read_csv("/Users/catamorr/Desktop/GitHub/BIS15L_W26_cdeamorrortu/lab5/data/Tamburelloetal_HomeRangeDatabase.csv")
+homerange <- read_csv("/Users/cata/Desktop/BIS15L_W26_cdeamorrortu/lab5/data/Tamburelloetal_HomeRangeDatabase.csv")
 ```
 
 **2. What is the structure of the `homerange` data? Does it have any NA's? Do a quick exploratory analysis of your choice below.**
@@ -47,36 +47,39 @@ homerange %>% filter(trophic.guild == "carnivore" | trophic.guild == "herbivore"
 
 **5. Which herbivorous mammals have homeranges greater than 1,000,000 m²? Show only the common name, order, mean homerange size, and mean body mass. Arrange the data in descending order by homerange size and show only the top 10 species.**
 ```{r}
-homerange %>% filter(mean.hra.m2 > 1000000) %>% select(common.name, order, mean.hra.m2, mean.mass.g) %>% arrange(desc(mean.hra.m2))
+homerange %>% filter(mean.hra.m2 > 1000000) %>% select(common.name, order, mean.hra.m2, mean.mass.g) %>% arrange(desc(mean.hra.m2)) %>% slice_max(mean.hra.m2, n=10)
 ```
 
 **6. Which two species have the largest and smallest homerange sizes?**
 ```{r}
-
+homerange %>% filter(mean.hra.m2 > 1000000) %>% select(common.name, order, mean.hra.m2, mean.mass.g) %>% arrange(desc(mean.hra.m2)) %>% slice_max(mean.hra.m2, n=1)
 ```
 
 ```{r}
+homerange %>% filter(mean.hra.m2 > 1000000) %>% select(common.name, order, mean.hra.m2, mean.mass.g) %>% arrange(desc(mean.hra.m2)) %>% slice_min(mean.hra.m2, n=1)
 
 ```
 
 **7. Which carnivorous mammals have the largest homeranges?**
 ```{r}
-
+homerange %>% filter(trophic.guild == "carnivore") %>% select(common.name, mean.hra.m2) %>% arrange(desc(mean.hra.m2)) %>% slice_max(mean.hra.m2, n=10)
 ```
 
 **8. Is there a relationship between body mass and homerange size? Make a scatterplot to show this relationship. Be sure to include appropriate labels and a title.**
 ```{r}
-
+names(homerange)
+homerange %>% select(mean.mass.g, mean.hra.m2) %>% ggplot(data = homerange, mapping = aes(x = mean.mass.g, y = mean.hra.m2)) + geom_point() +labs(title = "Relationship Between Body Mass and Homerange Size", x = "Mean Mass (g)", y = "Mean Homerange Size (m^2)") + scale_x_log10() + scale_y_log10()
 ```
 
 **9. Use filter to extract the data for only birds and mammals. Then make a plot that compares the homerange sizes of these two groups. Be sure to include appropriate labels and a title.**
 ```{r}
-
+filter(homerange, taxon == "birds" | taxon == "mammals") %>% ggplot(mapping = aes(x = taxon, y = mean.hra.m2)) + geom_boxplot(mapping = aes(fill = taxon)) + labs(title = "Homerange Sizes of Birds and Mammals", x = "Taxon", y = "Homerange Size") + scale_y_log10()
 ```
 
 **10. Do one additional exploratory analysis of your choice. Before writing the code, write the question you are trying to answer. The question should be biologically meaningful and appropriate for the data. It must include at least one `filter()`, `select()`, and `arrange()`.**
 ```{r}
-
+"Are there more carnivorous ectotherms or endotherms?"
+homerange %>% select(trophic.guild, thermoregulation) %>% filter(trophic.guild == "carnivore") %>% ggplot(mapping = aes(x = thermoregulation)) + geom_bar(mapping = aes(fill = thermoregulation)) + labs(title = "Thermoregulation in Carnivores")
 ```
 
 ## Knit and Upload
