--- a/lab6/lab6_1.Rmd
+++ b/lab6/lab6_1.Rmd
@@ -34,25 +34,35 @@ Recall that the the verbs `select()` and `filter()` are used to extract columns 
 
 1. Select species, island, and body mass from the penguins data. Arrange results by body mass.
 ```{r}
-
+penguins %>% 
+  select(species, island, body_mass_g) %>% 
+  arrange(body_mass_g)
 ```
 
 2. Filter the penguins data to only include observations from Biscoe and Dream islands.
 ```{r}
-
+penguins %>% 
+  filter(island == "Biscoe" | island == "Dream")
 ```
 
 ```{r}
-
+penguins %>% 
+  filter(island == c("Biscoe", "Dream"))
 ```
 
 ```{r}
-
+penguins %>% 
+  filter(island %in% c("Biscoe", "Dream"))
 ```
 
 3. Make a plot that shows the relationship between body mass and flipper length. How does this compare among different species?
 ```{r}
-
+penguins %>% 
+  select(species, body_mass_g, flipper_length_mm) %>%  
+  ggplot(data = penguins, mapping = aes(x = flipper_length_mm, y = body_mass_g)) + 
+  geom_point(mapping = aes(color = species)) +  
+  geom_smooth(method = "lm", se=F) + #adds line of best fit 
+  labs(title = "Flipper Length and Body Mass Variations Among Species of Penguins", x = "Flipper Length (mm)", y = "Body Mass (g)" )
 ```
 
 ## `distinct()`
@@ -60,34 +70,49 @@ Recall that the the verbs `select()` and `filter()` are used to extract columns 
 
 One helpful approach to new data is to find any duplicated rows. If we first look at the dimensions of the penguins data, we see it has 344 rows and 8 columns.
 ```{r}
+glimpse(penguins)
+```
 
+```{r}
+summary(penguins)
 ```
 
 Using `distinct()` across all rows, we see there are no duplicates. This means every row contains unique observations across all variables.
 ```{r}
-
+penguins %>% 
+  distinct() #if it finds one row exactly the same as another one, it will correct
 ```
 
 But if we only look at species, we can see that there are only 3 unique species in the data.
 ```{r}
-
+penguins %>% 
+  distinct(species) #returns the distinct instances that there are in the variable
 ```
 
 What if we want to know which islands each species occurs on?
 ```{r}
-
+penguins %>% 
+  distinct(species, island, .keep_all = T) #will tell us which species appear on which island, .keep_all will keep all of the other variables for ONE of the matches that fits the criteria
 ```
 
 ## `mutate()`
 `mutate()` is another verb that acts on columns. It allows us to create new columns from existing columns in a data frame. When we use `mutate()`, the columns are added to the end of the dataframe by default. Let's create a new column that converts body mass from grams to kilograms.
 ```{r}
-
+penguins %>% 
+  mutate(body_mass_kg = body_mass_g/1000) %>% 
+  select(species, body_mass_g, body_mass_kg) %>% 
+  arrange(body_mass_kg)
 ```
 
 ## `mutate()` and `across()`
 We use `across()` within `mutate()` to apply a function to multiple columns. This is especially helpful when cleaning data. For example, let's say we want to convert all columns that end with `mm` to centimeters. We can use `across()` to do this.
 ```{r}
-
+penguins %>% 
+  mutate(across(ends_with("mm"), ~ ./10)) %>% 
+  select(species,
+         bill_length_cm = bill_length_mm, 
+         bill_depth_cm = bill_depth_mm,
+         flipper_length_cm = flipper_length_mm) #without the 'select' function, it just replaces the values given. make sure to select in order to be able to rename what you are converting
 ```
 
 What does the `~./10` mean? The `~` indicates that what follows is a formula (lambda function). The `.` represents the current column being processed. So, `./10` means "take the current column and divide it by 10". This operation is applied to all columns that end with `mm`.
@@ -99,36 +124,43 @@ We already learned how to use `rename()` to change column names. We also learned
 
 Let's have a look at some new data focused on mammal lifehistories. The data are from: S. K. Morgan Ernest. 2003. Life history characteristics of placental non-volant mammals. Ecology 84:3402.   [link](http://esapubs.org/archive/ecol/E084/093/)  
 ```{r}
-
+mammals <- read_csv("data/mammal_lifehistories_v2.csv") %>% clean_names()
 ```
 
 What is the structure of the data? Are there any NA's or other issues?
 ```{r}
-
+glimpse(mammals)
 ```
 
 One thing to notice is the column names are inconsistent. This is going to cause problems for us down the line. We could rename each column, one at a time, using `rename()`, but that would be tedious. Instead, we can use the `clean_names()` function from the `janitor` package to fix all of the column names at once.
 ```{r}
-
+mammals <- mammals %>% 
+  clean_names()
+#It's good practice to add clean names into the beginning when you read your file so that it's fixed from the get go
 ```
 
 ```{r}
-
+glimpse(mammals)
 ```
 
 Notice that `clean_names()` has converted all column names to lowercase and replaced spaces with underscores. But, no adjustments were made to the data itself. What if we want to change observations from upper case to lower case?
 ```{r}
-
+mammals %>% 
+  mutate(across(c("order", "family"), tolower))
+#tolower makes them all lowercase, mutate(across()) goes through specific columns
 ```
 
 This will change all columns to lower case. But, notice what happens to numeric columns.
 ```{r}
-
+mammals %>% 
+  mutate(across(everything(), tolower)) #good but it changed all numerics into characters (not good)
 ```
 
 For this reason, it might be better to use `where` so we can specify only character columns.
 ```{r}
-
+mammals %>% 
+  mutate(across(where(is.character), tolower))
+#will make only the character variables into lowercase
 ```
 
 ## `if_else()`
@@ -136,41 +168,82 @@ We briefly introduce `if_else()` here because it allows us to use `mutate()` but
 
 Have a look at the data from mammals below. Notice that the values for newborn include `-999.00`. This is sometimes used as a placeholder for NA (but, is a really bad idea). We can use `if_else()` to replace `-999.00` with `NA`.  
 ```{r}
-
+summary(mammals)
 ```
 
 ```{r}
-
+mammals %>% 
+  select(genus, species, newborn) %>% 
+  arrange(newborn)
 ```
+
+```{r}
+mammals %>% 
+  select(genus, species, newborn) %>% 
+  mutate(newborn_new = ifelse(newborn == -999.00, NA, newborn))
+```
+
 
 ## Practice
 1. Following the example above, convert all -999 values in the mammals dataframe to NA.
 ```{r}
-
+glimpse(mammals)
 ```
 
 ```{r}
-
+mammals %>% 
+  mutate(
+    across(
+      c(
+        mass,
+        wean_mass,
+        gestation,
+        max_life,
+        newborn,
+        weaning,
+        litter_size,
+        afr,
+        litters_year),
+      ~ifelse(.==-999, NA, .)
+    ))
 ```
 
 2. In the mammals data, make a new column `mass_kg` that that converts mass from grams to kilograms. Select the columns genus, species, mass, and mass_kg, and arrange the data by mass_kg in descending order. What is the common name for the species with the highest mass?  
 ```{r}
-
-```
+mammals %>% 
+  mutate(mass_kg = mass/1000) %>% 
+  select(genus, species, mass, mass_kg) %>% 
+  arrange(desc(mass_kg))
+``` 
 
 3. What is the relationship between gestation and newborn mass?
 ```{r}
-
+mammals %>% 
+  select(gestation, newborn) %>% 
+  ggplot(mapping = aes(x = gestation, y = newborn)) +
+  geom_point() +
+  scale_x_log10() + scale_y_log10() +
+  labs(title = "Gestation vs Newborn Weight", x = "Gestation", y = "Newborn Mass")
 ```
 
 4. Which mammal has the longest life span in years?  
 ```{r}
-
+mammals %>% 
+  select(species, max_life) %>% 
+  mutate(max_life_new = max_life/12) %>% 
+  arrange(max_life) %>% 
+  slice_max(order_by = max_life, n = 1)
+#there's a lot of missing data we replaced (all of the -999s), so that might be a problem
 ```
 
 5. Do larger mammals live longer?
 ```{r}
-
+mammals %>% 
+  select(mass, max_life) %>% 
+  ggplot(mapping = aes(x = mass, y = max_life)) +
+  geom_point() +
+  scale_x_log10() + scale_y_log10() +
+  labs(title = "Mass (g) vs Lifespan", x = "Mass(g)", y = "Lifespan")
 ```
 
 -->[Home](https://jmledford3115.github.io/datascibiol/)  
