--- a/lab6/hw6.Rmd
+++ b/lab6/hw6.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 6"
-author: "Your Name Here"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -23,17 +23,17 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 **1. Load `IvindoData_DryadVersion.csv` and store it as a new object called `gabon`.**
 ```{r}
-
+gabon <- read_csv("data/IvindoData_DryadVersion.csv") %>% clean_names()
 ```
 
 **2. Use one or more of the summary functions you have learned to get an idea of the structure of the data.**  
 ```{r}
-
+glimpse(gabon)
 ```
 
 **3. Clean the data as necessary following the conventions from lab 6.**
 ```{r}
-
+clean_names(gabon)
 ```
 
 ```{r}
@@ -42,12 +42,17 @@ Reference: Koerner SE, Poulsen JR, Blanchard EJ, Okouyi J, Clark CJ. Vertebrate 
 
 **4. Use `mutate()` Change the variables `HuntCat`, `LandUse`, and `TransectID` to factors. Be sure to store the output as a new dataframe and use it for the remaining questions.**
 ```{r}
-
+newgabon <- 
+  gabon %>% 
+  mutate(across(c(hunt_cat, land_use, transect_id), as.factor))
 ```
 
 **5. Make a plot that shows the number of transects for each land use type.**
 ```{r}
-
+newgabon %>% 
+  select(land_use, transect_id) %>% 
+  ggplot(mapping = aes(x = land_use)) +
+  geom_bar()
 ```
 
 ```{r}
