--- a/lab6/hw6.Rmd
+++ b/lab6/hw6.Rmd
@@ -70,7 +70,11 @@ newgabon %>%
 
 **7. For which land use type (national parks, logging, or neither) is average all species diversity the greatest?**
 ```{r}
-
+newgabon %>% 
+  select(diversity_all_species, land_use) %>% 
+  ggplot(mapping = aes(x = land_use, y = diversity_all_species)) +
+  geom_boxplot(mapping = aes(fill = land_use)) +
+  labs(title = "Total Species Diversity by Land Use Type", x = "Land Use Type", y = "Total Species Diversity")
 ```
 
 ```{r}
@@ -87,12 +91,18 @@ newgabon %>%
 
 **8. Is there a relationship between vegetation richness and mammal species richness?**
 ```{r}
-
+newgabon %>% 
+  select(veg_rich, rich_mammal_species) %>% 
+  ggplot(mapping = aes(x = veg_rich, y = rich_mammal_species)) +
+  geom_point() +
+  labs(title = "Vegetation and Mammal Species Richness", x = "Vegetation Richness", y = "Mammal Species Richness")
 ```
 
 **9. Use `filter` to find all transects that have greater than 15 tree species or a breast height diameter between 50 and 60cm.  **
 ```{r}
-
+newgabon %>% 
+  select(transect_id, veg_rich, distance) %>% 
+  filter(veg_rich > 15.00 | (distance > 50 & distance < 60))
 ```
 
 ```{r}
@@ -101,7 +111,10 @@ newgabon %>%
 
 **10.Which transects and land use types have more than 10 tree species and 10 mammal species? Use `arrange()` to sort by the number of tree species.**
 ```{r}
-
+newgabon %>% 
+  select(transect_id, veg_rich, rich_mammal_species) %>% 
+  filter(veg_rich > 10 & rich_mammal_species > 10) %>% 
+  arrange(veg_rich)
 ```
 
 ## Knit and Upload
