--- a/lab7/hw7.Rmd
+++ b/lab7/hw7.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 7"
-author: "Your Name Here"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -22,58 +22,130 @@ For this assignment, we will use data from a study on elephants and the effects 
 Reference: [Chiyo, Patrick I., Vincent Obanda, and David K. Korir. “Illegal tusk harvest and the decline of tusk size in the African elephant.” Ecology and Evolution 5, 22: 5216–5229 (2015)](https://doi.org/10.1002/ece3.1769). Data deposited at [Dryad Digital Repository](https://doi.org/10.5061/dryad.h6t7j).  
 
 **1. Before starting data analysis, read the abstract of the paper to get an idea of the questions being asked. In 2-3 sentences, describe what the study is testing and the variables involved.**  
-\
-\
-\
-\
-\
+
+
+```{r}
+"The study is testing whether populations of survivors of large historical elephant harvests had less large tuskers, and whether the following generations had smaller tusks. The variables involved are tusk length and circumference, mean tusk length, mean basal tusk circumference, and homogeneity."
+```
+
+
+
 
 **2. Load `elephants.csv` and store it as a new object called `elephants`.**  
 \
 \
-\
+```{r}
+elephants <- read_csv("data/elephants.csv") %>% 
+  clean_names()
+```
+
 \
 \
 
 **3. Clean the data by converting variable names to lowercase with no spaces or special characters.**  
 \
 \
-\
+```{r}
+clean_names(elephants)
+```
+
 \
 \
 
 **4. Use one or more of the summary functions you have learned to get an idea of the structure of the data.**   
 \
 \
-\
+```{r}
+glimpse(elephants)
+```
+
 \
 \
 
 **5. Use `mutate()` Change the variables `years_of_sample_collection`, `elephant_id`, and `sex` to factors. Be sure to store the output as a new dataframe and use it for the remaining questions.**  
 \
 \
-\
+```{r}
+elefactor <- elephants %>% 
+  mutate(years_of_sample_collection = as_factor(years_of_sample_collection), 
+         elephant_id = as_factor(elephant_id), 
+         sex = as_factor(sex))
+```
+
 \
 \
 
 **6. From which years were data collected? Show the sample periods below.**  
 \
 \
-\
+```{r}
+elefactor %>% 
+  select(years_of_sample_collection) %>% 
+  distinct(years_of_sample_collection)
+```
+
 \
 \
 
 **7. How many males and females were sampled in this study?**  
 \
 \
-\
+```{r}
+elefactor %>% 
+  select(sex) %>% 
+  count(sex)
+```
+
 \
 \
 
 **8. What is the mean, median, and standard deviation for age of males and females included in the study? Separate the results by year of sample collection. Does the sampling look even between years and sexes?**  
 \
 \
-\
+```{r}
+
+#elefactor %>% 
+#  select(
+#    sex, estimated_age_years, years_of_sample_collection
+#  ) %>% 
+#  summarize(sex, years_of_sample_collection,
+#    meanage = mean(estimated_age_years, na.rm = T),
+#    meadianage = median(estimated_age_years, na.rm = T),
+#    sdage = sd(estimated_age_years, na.rm = T)
+#  ) %>% 
+#  distinct() %>% 
+#  arrange(sex)
+## Both sexes on one table, arranged by sex
+
+elefactor %>% 
+  select(
+    sex, estimated_age_years, years_of_sample_collection
+  ) %>% 
+  filter(
+    sex == "f"
+  ) %>% 
+  summarize(sex, years_of_sample_collection,
+    meanage = mean(estimated_age_years, na.rm = T),
+    meadianage = median(estimated_age_years, na.rm = T),
+    sdage = sd(estimated_age_years, na.rm = T)
+  ) %>% 
+  distinct()
+
+elefactor %>% 
+  select(
+    sex, estimated_age_years, years_of_sample_collection
+  ) %>% 
+  filter(
+    sex == "m"
+  ) %>% 
+  summarize(sex, years_of_sample_collection,
+    meanage = mean(estimated_age_years, na.rm = T),
+    meadianage = median(estimated_age_years, na.rm = T),
+    sdage = sd(estimated_age_years, na.rm = T)
+  ) %>% 
+  distinct()
+```
+
 \
 \
 
