--- a/lab7/lab7_1.Rmd
+++ b/lab7/lab7_1.Rmd
@@ -37,15 +37,18 @@ large
 ```
 
 ```{r}
-
+small <- msleep %>% 
+  filter(bodywt < 10) %>% 
+  arrange(desc(bodywt))
+small
 ```
 
 ```{r}
-
+mean(large$bodywt)
 ```
 
 ```{r}
-
+mean(small$bodywt)
 ```
 
 ## `summarize()`
@@ -53,53 +56,86 @@ Fortunately, dplyr has some functions that make producing summary statistics eas
 
 Large mammals
 ```{r}
-
+msleep %>% 
+  filter(bodywt > 150) %>% 
+  summarize(mean_bodywt_lg = mean(bodywt))
 ```
 
 Small mammals
 ```{r}
-
+msleep %>% 
+  filter(bodywt < 10) %>% 
+  summarize(mean_bodywt_sm = mean(bodywt))
 ```
 
 You can also combine functions to make summaries for multiple variables.
 ```{r}
-
+msleep %>% 
+  filter(bodywt < 10) %>% 
+  summarize(mean_bodywt_sm = mean(bodywt), 
+            min_bodywt_sm = min(bodywt), 
+            max_bodywt_sm = max(bodywt),
+            sd_bodywt_sm = sd(bodywt),
+            total = n())
 ```
 
 Maybe you want to summarize all of the numeric variables in the data frame. You can use the `where()` function to select only the numeric variables.
 ```{r}
-
+msleep %>% 
+  select(where(is.numeric)) %>% 
+  summarize_all(mean) 
+#we want to remove the NAs!
 ```
 
 Don't forget to remove NA's.
 ```{r}
-
+msleep %>% 
+  select(where(is.numeric)) %>% 
+  summarize_all(mean, na.rm = T)
+# Removing the NAs
+## This method is a little "deprecated," they're trying to stop us from using this.
 ```
 
 This is a little more efficient.
 ```{r}
-
+msleep %>% 
+  summarize(across(where(is.numeric), 
+                   ~mean(.x, na.rm = T)))
+# This is what they're tyring to get us to start using, but either one works it doesn't really matter right now
 ```
 
 ## Practice
 1. What is the mean, min, and max `bodywt` for the taxonomic order Primates? Provide the total number of observations.
 ```{r}
-
+glimpse(msleep)
+msleep %>% 
+  select(order, bodywt) %>% 
+  filter(order == "Primates") %>% 
+  summarize(meanbw = mean(bodywt),
+            minbw = min(bodywt),
+            maxbw = max(bodywt),
+            observations = n())
 ```
 
 `n_distinct()` is a handy way of cleanly presenting the number of distinct observations. Notice that there are 9 genera with over 100 in body weight.
 ```{r}
-
+msleep %>% 
+  filter(bodywt > 100) %>% 
+  n_distinct()
 ```
 
 Here we show the number of distinct genera over 100 in body weight.
 ```{r}
-
+msleep %>% 
+  filter(bodywt > 100) %>% 
+  summarize(n_genera = n_distinct(genus))
 ```
 
 Not to be confused with n(), which counts the total number of observations.
 ```{r}
-
+msleep %>% 
+  filter(bodywt > 100) %>% 
+  summarize(total = n())
 ```
 
 ```{r}
@@ -108,13 +144,19 @@ Not to be confused with n(), which counts the total number of observations.
 
 `pull()` is another useful verb that extracts a single column from a data frame as a vector.
 ```{r}
-
+msleep %>% 
+  filter(bodywt > 100) %>% 
+  distinct() %>% 
+  pull(genus)
 ```
 
 ## Practice
 1. How many genera are represented in the msleep data frame?
 ```{r}
-
+msleep %>% 
+  distinct(genus) %>% 
+  pull(genus) %>% 
+  n_distinct()
 ```
 
 ## Counts
@@ -122,32 +164,47 @@ Although `summarize()` is helpful, oftentimes we are only interested in counts. 
 
 For example, if we wanted to count the number of observations for each `vore` category in the `msleep` data frame we could do the following:
 ```{r}
-
+msleep %>% 
+  count(vore)
 ```
 
 ```{r}
-
+msleep %>% 
+  count(vore) %>% 
+  ggplot(mapping = aes(x = vore, y = n)) +
+  geom_col(mapping = aes(fill = "red"))
+#use geom_col() when we have an x and a y
 ```
 
 You can even combine multiple variables to get counts. For example, if we wanted to count the number of observations for each `vore` category within each `order` category we could do the following:
 ```{r}
-
+msleep %>% 
+  count(vore, order)
 ```
 
 The tabyl() function from the janitor package is also very useful for producing counts and percentages.  
 ```{r}
-
+msleep %>% 
+  tabyl(vore)
 ```
 
 ## Practice
 1. In the taxonomic order Carnivora, count the number of observations for each conservation status.
 ```{r}
-
+msleep %>% 
+  select(order, conservation) %>% 
+  filter(order == "Carnivora") %>% 
+  tabyl(conservation)
 ```
 
 2. Among herbivores, which order is most represented? Return the top 5 orders with counts, sorted in descending order.
 ```{r}
-
+glimpse(msleep)
+msleep %>% 
+  filter(vore == "herbi") %>% 
+  count(order, sort = T) %>% 
+  arrange(desc(order)) %>% 
+  slice_max(order, n = 5)
 ```
 
 -->[Home](https://jmledford3115.github.io/datascibiol/)  
