--- a/lab9/hw9.Rmd
+++ b/lab9/hw9.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 9"
-author: "Your Name Here"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -29,37 +29,48 @@ This homework loosely follows the tutorial of [R Ladies Sydney](https://rladiess
 
 1. Start by loading the data `sydneybeaches`. Do some exploratory analysis to get an idea of the data structure.
 ```{r}
-
+beaches <- clean_names(read_csv("data/sydneybeaches.csv"))
 ```
 
 2. Are these data "tidy" per the definitions of the tidyverse? How do you know? Are they in wide or long format?
 ```{r}
-
+"These are in wide format, I know because a lot of the values repeat."
 ```
 
 3. We are only interested in the variables site, date, and enterococci_cfu_100ml. Make a new object focused on these variables only. Name the object `sydneybeaches_long`
 ```{r}
-
+sydneybeaches_long <- 
+  beaches %>% 
+  select(site, date, enterococci_cfu_100ml)
 ```
 
 4. Pivot the data such that the dates are column names and each beach only appears once (wide format). Name the object `sydneybeaches_wide`
 ```{r}
-
+sydneybeaches_wide <- 
+  sydneybeaches_long %>% 
+  pivot_wider(names_from = date, values_from = enterococci_cfu_100ml)
 ```
 
 5. Pivot the data back so that the dates are data and not column names.
 ```{r}
-
+sydneybeaches_wide %>% 
+  pivot_longer(-site, names_to = "date", values_to = "enterococci_cfu_100ml")
 ```
 
 6. We haven't dealt much with dates yet, but separate the date into columns day, month, and year. Do this on the `sydneybeaches_long` data.
 ```{r}
-
+sydneybeaches_long <- 
+sydneybeaches_long %>% 
+  separate(date, into = c("month", "day", "year"), sep = "/")
+sydneybeaches_long
 ```
 
 7. What is the average `enterococci_cfu_100ml` by year for each beach. Think about which data you will use- long or wide.
 ```{r}
-
+sydneybeaches_long <- 
+  sydneybeaches_long %>% 
+  select(site, year, enterococci_cfu_100ml)
+sydneybeaches_long
 ```
 
 8. Make the output from question 7 easier to read by pivoting it to wide format.
