--- a/lab10/hw10.Rmd
+++ b/lab10/hw10.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Homework 10"
-author: "Key"
+author: "Catalina De Amorrortu"
 date: "`r Sys.Date()`"
 output:
   html_document:
@@ -34,17 +34,28 @@ sharks <-
 ## Questions
 1. Are there any "hotspots" for shark incidents in California? Show the top five counties with the most incidents.
 ```{r}
-
+sharks %>% 
+  group_by(county) %>% 
+  count(county) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T))) %>% 
+  arrange(desc(n)) %>% 
+  slice_head(n = 5)
 ```
 
 2.  Make a plot that shows the total number of incidents per county.
 ```{r}
-
+sharks %>% 
+  ggplot(mapping = aes(x = county)) +
+  geom_bar(mapping = aes(fill = county)) +
+  coord_flip()
 ```
 
 3. Are there months of the year when incidents are more likely to occur? Make a plot that shows the total number of incidents by month. Which month has the highest number of incidents?  
 ```{r}
-
+sharks %>% 
+  ggplot(mapping = aes(x = as.factor(month))) +
+  geom_bar(mapping = aes(fill = as.factor(month))) +
+  labs(title = "Shark Attacks by Month", x = "Month", fill = "Month")
 ```
 
 ```{r}
