--- a/lab10/lab10_2.Rmd
+++ b/lab10/lab10_2.Rmd
@@ -30,37 +30,44 @@ options(scipen=999) #cancels the use of scientific notation for the session
 Reference: Tamburello N, Cote IM, Dulvy NK (2015) Energy and the scaling of animal space use. The American Naturalist 186(2):196-211. http://dx.doi.org/10.1086/682070.  
 Data: http://datadryad.org/resource/doi:10.5061/dryad.q5j65/1  
 ```{r message=FALSE, warning=FALSE}
-homerange <- read_csv("data/Tamburelloetal_HomeRangeDatabase.csv", na = c("", "NA", "\\")) %>% clean_names()
+homerange <- read_csv("data/Tamburelloetal_HomeRangeDatabase.csv", 
+                      na = c("", "NA", "\\")) %>% clean_names()
 ```
 
 ## Aesthetics
 There are many options to create nice plots in `ggplot`. One useful trick is to store the plot as a new object and then experiment with geom's and aesthetics. Let's setup a plot that compares `log10_mass` and `log10_hra.` Notice that we are not specifying a geom.
 ```{r}
-
+p <- 
+  homerange %>% 
+  ggplot(aes(x = log10_mass, y = log10_hra)) 
+  
 ```
 
 Play with point size by adjusting the `size` argument.
 ```{r}
-
+p + geom_point(size = 2.25, color = "orange") #size adjusts the shape of the points, if you make it too big it is called "overplotting," and makes the data hard to see. can be fixed with geom_jitter(size = x), but only sometimes
 ```
 
 We can color the points by a categorical variable.
 ```{r}
-
+p + geom_point(aes(color = thermoregulation), size = 1.5)
 ```
 
 We can also map shapes to another categorical variable.
 ```{r}
-
+p + 
+  geom_point(aes(shape = thermoregulation, color = thermoregulation), size = 1.5) +
+  scale_color_manual(values = c("ectotherm" = "firebrick",
+                                "endotherm" ="goldenrod")) 
 ```
 
 What about just filling in with a color preference or size?
 ```{r}
-
+p + geom_point(color = "black", alpha = 0.8, shape = 24, fill = "blue")
 ```
 
 ```{r}
-
+colors()
 ```
 
 ```{r}
@@ -80,32 +87,54 @@ At this point you should be comfortable building bar plots that show counts of o
 
 Let's start by counting how many observations we have in each taxonomic group.
 ```{r}
-
+homerange %>% 
+  count(taxon, sort = T)
 ```
 
 Now let's make a bar plot of these data.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = taxon)) +
+  geom_bar() +
+  coord_flip() +
+  labs(title = "Observations by Taxon", x = "Taxonomic Group", y = NULL)
 ```
 
 By specifying `fill=trophic.guild` we build a stacked bar plot that shows the proportion of a given taxonomic group that is an herbivore or carnivore.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = taxon)) +
+  geom_bar(mapping = aes(fill = trophic_guild)) +
+  coord_flip() +
+  labs(title = "Observations by Taxon", x = "Taxonomic Group", y = NULL)
 ```
 
 We can also have counts of each trophic guild within taxonomic group shown side-by-side by specifying `position="dodge"`.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = taxon)) +
+  geom_bar(mapping = aes(fill = trophic_guild), position = "dodge") +
+  coord_flip() +
+  labs(title = "Observations by Taxon", x = "Taxonomic Group", y = NULL)
 ```
 
 Here is the same plot oriented vertically.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = taxon, fill = trophic_guild)) +
+  geom_bar(position = "dodge") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  coord_flip() +
+  labs(title = "Observations by Taxon", x = "Taxonomic Group", y = NULL)
 ```
 
 We can also scale all bars to a percentage.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = taxon, fill = trophic_guild)) +
+  geom_bar(position = position_fill()) +
+  scale_y_continuous(labels = scales::percent) +
+  coord_flip()
 ```
 
 ## Practice
@@ -113,16 +142,23 @@ For this practice, let's use the [palmerpenguins](https://allisonhorst.github.io
 
 1. Make a bar plot that shows counts of individuals by island. Fill by species, and try both a stacked bar plot and `position="dodge"`.
 ```{r}
-
+penguins %>% 
+  ggplot(aes(x = island, fill = species)) +
+  geom_bar(position = "dodge") +
+  scale_color_manual( values = c("Adelie" = "magenta", "Chinstrap" = "yellow", "Gentoo" = "cyan"))
 ```
 
 ```{r}
-
+penguins %>% 
+  ggplot(aes(x = island, fill = species)) +
+  geom_bar(position = position_fill()) 
 ```
 
 2. Make another bar plot that shows the number of individuals by sex on each island?
 ```{r}
-
+penguins %>% 
+  ggplot(aes(x = island, fill = sex)) +
+  geom_bar(position = position_fill()) 
 ```
 
 ## Using `group`
@@ -130,7 +166,9 @@ In addition to `fill`, `group` is an aesthetic that accomplishes the same functi
 
 Here is a box plot that shows `log10.mass` by taxonomic `class.`
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = class, y = log10_mass, group = taxon)) +
+  geom_boxplot()
 ```
 
 I use `group` to make individual box plots for each taxon.
@@ -140,7 +178,9 @@ I use `group` to make individual box plots for each taxon.
 
 I can also use `fill` to associate the different taxa with a color coded key.
 ```{r}
-
+homerange %>% 
+  ggplot(aes(x = class, y = log10_mass, fill = taxon)) +
+  geom_boxplot()
 ```
 
 ## Wrap-up  
