--- a/lab10/hw10.Rmd
+++ b/lab10/hw10.Rmd
@@ -47,7 +47,8 @@ sharks %>%
 sharks %>% 
   ggplot(mapping = aes(x = county)) +
   geom_bar(mapping = aes(fill = county)) +
-  coord_flip()
+  coord_flip() + 
+  labs(title = "Number of Incidents per County", x = "County", y = "Number of Incidents")
 ```
 
 3. Are there months of the year when incidents are more likely to occur? Make a plot that shows the total number of incidents by month. Which month has the highest number of incidents?  
@@ -59,42 +60,92 @@ sharks %>%
 ```
 
 ```{r}
-
+"October has the highest number of incidents."
 ```
 
 4. Is there a time of day when most attacks occur? Make a plot that shows the total number of incidents by time of day. Which time of day has the highest number of incidents?  
 ```{r}
+sharks %>% 
+  ggplot(mapping = aes(x = as.factor(time))) +
+  geom_bar(mapping = aes(fill = as.factor(time))) +
+  labs(title = "Shark Attacks by Hour", x = "Time of Day", fill = "Time of Day") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
+  labs(title = "Number of Accidents by Time of Day", x = "Time of Day", y = "Number of Accidents")
+
+"The most amount of shark attacks happen at 10:45"
 
 ```
 
 5. How do the number and types of injuries compare by county? Make a table that shows the number of injury types by county. Which county has the highest number incidents? (hint: your table should be in wide format)
 ```{r}
+sharks %>% 
+  group_by(county) %>% 
+  count(injury) %>% 
+  pivot_wider(names_from = injury, values_from = n) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T)))
 
+"San Mateo County has the highest number incidents."
 ```
 
 6. Use the table from #5 to make a plot that shows the total number of incidents by county.
 ```{r}
+sharks %>% 
+  group_by(county) %>% 
+  count(injury) %>% 
+  pivot_wider(names_from = injury, values_from = n) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T))) %>% 
+  mutate(total = (minor + minor* + major + major* + none + none* + fatal)) %>% 
+  ggplot(x = county, y = total) +
+  geom_col(mapping = aes(x = county, y = total, fill = county)) + 
+  coord_flip()  + 
+  labs(title = "Number of Accidents by County", x = "County", y = "Accidents")
 
+"San Diego County has the highest number of incidents"
 ```
 
 7. In the data, `mode` refers to a type of activity. Which activity is associated with the highest number of incidents?
 ```{r}
-
+sharks %>% 
+  group_by(mode) %>% 
+  count(injury) %>% 
+  pivot_wider(names_from = injury, values_from = n) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T))) %>% 
+  mutate(total = (minor + minor* + major + major* + none + none* + fatal)) %>%
+  select(mode, total)
 ```
 
 8. Make a plot that compares the number of incidents by activity.
 ```{r}
-
+sharks %>% 
+  group_by(mode) %>% 
+  count(injury) %>% 
+  pivot_wider(names_from = injury, values_from = n) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T))) %>% 
+  mutate(total = (minor + minor* + major + major* + none + none* + fatal)) %>% 
+  ggplot(x = mode, y = total) +
+  geom_col(mapping = aes(x = mode, y = total, fill = mode)) + 
+  coord_flip() + 
+  labs(title = "Incidents by Activity Type", x = "Mode", y = "Number of Incidents")
 ```
 
 9. Which shark species is involved in the highest number of incidents?  
 ```{r}
-
+sharks %>% 
+  group_by(species) %>% 
+  count(injury) %>% 
+  pivot_wider(names_from = injury, values_from = n) %>% 
+  summarize(across(where(is.numeric), ~sum(.x, na.rm = T))) %>% 
+  mutate(total = (minor + minor* + major + major* + none + none* + fatal)) %>%
+  select(species, total)
 ```
 
 10. Are all incidents involving Great White's fatal? Make a plot that shows the number and types of incidents for Great White's only.  
 ```{r}
-
+sharks %>% 
+  filter(species == "White") %>% 
+  ggplot(mapping = aes(x = injury)) +
+  geom_bar(mapping = aes(fill = injury)) + 
+  labs(title = "Great White Shark Attacks by Injury Type", x = "Injurty", y = "Count")
 ```
 
 ## Knit and Upload
